[tool.poetry]
name = "keepyrs"
version = "0.1.0"
description = ""
authors = ["frank <frank@lunoho.company>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.10"
anchorpy = "0.20.1"
solana = "0.34.0"
python-dotenv = "^1.0.0"
drift-jit-proxy = "0.1.5"
driftpy = "^0.7.52"
websocket = "^0.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"