[tool.poetry]
name = "jit-maker"
version = "0.1.0"
description = "JIT maker bot for Drift Protocol v2"
authors = ["frank <frank@lunoho.company>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
solana = "0.30.1"
python-dotenv = "^1.0.0"
anchorpy = "0.17.1"
driftpy = {path = "/Users/frankfinnegan/Documents/musings/drift/driftpy"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
