[tool.poetry]
name = "jit-maker"
version = "0.1.0"
description = ""
authors = ["soundsonacid <soundsonacid@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
jit-proxy = { git = "https://github.com/drift-labs/jit-proxy.git", branch = "master", subdirectory = "python"}
python-dotenv = "^1.0.0"
driftpy = "0.7.7"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
